--- a/config/database.yml
+++ b/config/database.yml
@@ -44,6 +44,10 @@ development:
 test:
   <<: *default
   database: senderstrategy_bo_test
+  username: senderstrategy_bo
+  password: senderstrategy_bo
+  host: localhost
+  port: 5432
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
